Update Talks and Awards

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <ol reversed class="bracket">
     <li>
       Oka tubes in holomorphic line bundles. (with F. Forstnerič)<br>
+      Math. Ann., to appear<br>
       <a href="https://arxiv.org/abs/2310.14871" target="_blank">arXiv:2310.14871</a>
     </li>
     <li>
@@ -152,12 +153,52 @@
   <h2>Talks</h2>
   <ol reversed class="bracket">
     <li>
+      TBA.<br>
+      <a href="https://complex-geometry-and-lie-groups.org/" target="_blank">The 8th Workshop "Complex Geometry and Lie Groups"</a>, Osaka University Nakanoshima Center, 10–14 March 2025
+    </li>
+    <li>
+      Oka tubes in holomorphic line bundles.<br>
+      <a href="https://www.math.nagoya-u.ac.jp/ja/research/calendar/data/1731842951-88.html" target="_blank">Workshop on geometry of foliations and its applications</a>, Kyoto University of Education, 20–22 December 2024
+    </li>
+    <li>
+      複素解析幾何と代数幾何におけるGromovの楕円性について.<br>
+      <a href="https://www.math.nagoya-u.ac.jp/ja/research/calendar/data/1731842951-88.html" target="_blank">Algebraic Geometry Seminar</a>, Nagoya University, 19 December 2024
+    </li>
+    <li>
+      Levi問題から岡の原理へ, そして新たなLevi問題へ.<br>
+      <a href="https://www.math.nagoya-u.ac.jp/ja/research/calendar/data/1732069131-56.html" target="_blank">Colloquium</a>, Nagoya University, 18 December 2024
+    </li>
+    <li>
+      輓近岡理論の展望.<br>
+      <a href="https://www.nara-wu.ac.jp/omi/oka_symposium.html" target="_blank">22nd Oka Symposium</a>, Nara Women's University, 30 November–1 December 2024
+    </li>
+    <li>
+      Toward Gromov's Oka principle with growth conditions.<br>
+      <a href="https://math.univ-cotedazur.fr/~stolo/conf/SCVCRDyn24.html" target="_blank">SCV, CR geometry and Dynamics</a>, RIMS, Kyoto University, 25–29 November 2024
+    </li>
+    <li>
+      Oka tubes in holomorphic line bundles.<br>
+      <a href="https://sites.google.com/view/geometry-and-topology2024/" target="_blank">Geometry and Topology 2024</a>, Kyushu University, 16–18 October 2024
+    </li>
+    <li>
+      岡領域と双対Levi問題.<br>
+      <a href="https://www.mathsoc.jp/section/geometry/symp_schedule/geometry_symposium_2024.html" target="_blank">The 71st Geometry Symposium</a>, Kansai University, 10–13 September 2024
+    </li>
+    <li>
+      Oka tubes in holomorphic line bundles. (online)<br>
+      <a href="http://www.mcm.ac.cn/events/lectures/202407/t20240704_791902.html" target="_blank">Morningside Center of Mathematics, Chinese Academy of Sciences</a>, 9 July 2024
+    </li>
+    <li>
+      Oka domains and the dual Levi problem. (online)<br>
+      <a href="http://mcm.amss.cas.cn/events/lectures/202407/t20240704_791901.html" target="_blank">Morningside Center of Mathematics, Chinese Academy of Sciences</a>, 9 July 2024
+    </li>
+    <li>
       複素解析学における剛性と柔軟性. (online)<br>
       <a href="https://www.ms.u-tokyo.ac.jp/~yasuyuki/riken2024.htm" target="_blank">Academic Frontier Lecture Series</a>, 3 & 10 July 2024
     </li>
     <li>
-      TBA<br>
-      <a href="https://www.ms.u-tokyo.ac.jp/seminar/geocomp/" target="_blank">Seminar on Geometric Complex Analysis</a>,
+      Oka tubes in holomorphic line bundles.<br>
+      <a href="https://www.ms.u-tokyo.ac.jp/seminar/geocomp/past.html" target="_blank">Seminar on Geometric Complex Analysis</a>,
       The University of Tokyo, 17 June 2024
     </li>
     <li>
@@ -165,7 +206,7 @@
       <a href="https://sites.google.com/view/scvfukuoka/" target="_blank">Fukuoka Complex Analysis Seminar</a>, Kyushu University, 21 May 2024
     </li>
     <li>
-      Levi問題から岡の原理へ、そして新たなLevi問題へ.<br>
+      Levi問題から岡の原理へ, そして新たなLevi問題へ.<br>
       <a href="https://www.math.kyushu-u.ac.jp/activities/11628/" target="_blank">Colloquium</a>, Kyushu University, 16 May 2024
     </li>
     <li>
@@ -452,8 +493,11 @@
   </dl>
   <h3>Awards</h3>
   <dl>
+    <dt>October 2024</dt>
+      <dd><a href="https://www.math.nagoya-u.ac.jp/ja/alumni/hida-prize.html#result-13" target="_blank">13th Award for Encouragement of Alumni and Students (Hida Award)</a></dd>
+      <dd>Alumni Association of the Graduate School of Mathematics, Nagoya University</dd>
     <dt>September 2020</dt>
-      <dd>MSJ Takebe Katahiro Prize for Encouragement of Young Researchers</dd>
+    <dd><a href="https://www.mathsoc.jp/activity/public_relations/press_conference/takebe2020.html" target="_blank">The 2020 MSJ Takebe Katahiro Prize for Encouragement of Young Researchers</a></dd>
       <dd>The Mathematical Society of Japan</dd>
   </dl>
   <h3>Organization</h3>
