--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </li>
     <li>
       Oka tubes in holomorphic line bundles.<br>
-      <a href="https://www.math.nagoya-u.ac.jp/ja/research/calendar/data/1731842951-88.html" target="_blank">Workshop on geometry of foliations and its applications</a>, Kyoto University of Education, 20–22 December 2024
+      <a href="https://www.math.aoyama.ac.jp/~ymatsuda/wgf2024/index.html" target="_blank">Workshop on geometry of foliations and its applications</a>, Kyoto University of Education, 20–22 December 2024
     </li>
     <li>
       複素解析幾何と代数幾何におけるGromovの楕円性について.<br>
