--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 	<div style="float:left">
-		Latest: 12月に九州大学にて<a href="https://kusakabe.github.io/2025scvwinter/" target="_blank">多変数関数論冬セミナー</a>および<a href="https://masataka123.github.io/Oka_manifold_2025/" target="_blank">岡多様体の勉強会</a>を開催します.
+		12月に九州大学にて<a href="https://kusakabe.github.io/2025scvwinter/" target="_blank">多変数関数論冬セミナー</a>および<a href="https://masataka123.github.io/Oka_manifold_2025/" target="_blank">岡多様体の勉強会</a>を開催します.
 	</div>
 	<script>
 		var modified = new Date(document.lastModified);
@@ -555,6 +555,9 @@
 		<dt>August 2025</dt>
 			<dd><a href="http://math0.bnu.edu.cn/~wangzw/YMWSCV2025.html" target="_blank">Young Mathematician Workshop on Several Complex Variables 2025</a></dd>
 			<dd>Beijing Normal University</dd>
+		<dt>May 2025</dt>
+			<dd><a href="https://masataka123.github.io/AG_SCV_2025/" target="_blank">Mini-workshop on Algebraic Geometry and Several Complex Variables in Fukuoka</a></dd>
+			<dd>Fukuoka Institute of Technology</dd>
 		<dt>August 2024</dt>
 			<dd><a href="https://www2.math.kyushu-u.ac.jp/~kusakabe/YMWSCV2024/" target="_blank">Young Mathematicians Workshop on Several Complex Variables 2024</a></dd>
 			<dd>Osaka Metropolitan University</dd>
