冬セミナーページ作成

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 	<div style="float:left">
-		12月に九州大学にて<a href="https://kusakabe.github.io/2025scvwinter/" target="_blank">多変数関数論冬セミナー</a>および<a href="https://masataka123.github.io/Oka_manifold_2025/" target="_blank">岡多様体の勉強会</a>を開催します.
+		九州大学にて<a href="https://kusakabe.github.io/2025scvwinter/" target="_blank">2025年度多変数関数論冬セミナー</a>および<a href="https://masataka123.github.io/Oka_manifold_2025/" target="_blank">岡多様体の勉強会</a>を開催します.
 	</div>
 	<script>
 		var modified = new Date(document.lastModified);
@@ -684,7 +684,7 @@
 			<dd>Calculus A (Problem Session)</dd>
 			<dd>Lecturer: Naotake Takao</dd>
 	</dl>
-	<div style="text-align:right">$\square$</div>
+	<div style="float:right">$\square$</div>
 	<script>
 		document.querySelectorAll('.bracket').forEach(list => {
 			const c = list.querySelectorAll('li').length + 1;
