場所及び確定講演者更新

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -57,15 +57,22 @@
 	<div style="text-align:center;">
 		<h1>2025年度多変数関数論冬セミナー</h1>
 		<h2>2025年12月19日(金)–21日(日)</h2>
-		<h2><a href="#access">九州大学伊都キャンパス</a></h2>
+		<h2><a href="https://www.kyushu-u.ac.jp/ja/campus/ito/" target="_blank">九州大学 伊都キャンパス</a><br>ウエスト1号館D棟4階414号室 IMIコンファレンスルーム</h2>
 	</div>
 	<hr style="clear:right;">
 	<h2>参加登録</h2>
+	TBA
 	<hr>
-	<h2>講演者</h2>
+	<h2>確定講演者</h2>
 	<ul>
-		<li>TBA</li>
+		<li>石井 豊 (九州大学)</li>
+		<li>神田 秀峰 (東京大学)</li>
+		<li>髙倉 真和 (東京都立大学)</li>
+		<li>濱野 佐知子 (京都産業大学)</li>
+		<li>松本 佳彦 (大阪大学)</li>
+		<li>吉川 謙一 (京都大学)</li>
 	</ul>
+	他の講演者については現在調整中です.
 	<hr>
 	<h2>懇親会</h2>
 	TBA
