アクセス方法記載

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -20,34 +20,9 @@
 			height: 1px;
 			background-image: linear-gradient(to right, white, black, white);
 		}
-		table {
-			border-collapse: collapse;
-			text-align: center;
-		}
-		table th[scope=row]{
-			text-align: right;
-		}
-		table th {
-			background: #ddd;
-			padding: 5px;
-		}
-		table td {
-			background: #eee;
-			padding: 5px;
-		}
-		table tr:nth-child(odd) td {
-			background: #fff;
-		}
-		img {
-			width: 75%;
-			height: auto;
-		}
 	</style>
 </head>
 <body>
-	<div style="float:left">
-		工事中
-	</div>
 	<script>
 		var modified = new Date(document.lastModified);
 		var month = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
@@ -56,12 +31,12 @@
 	<hr>
 	<div style="text-align:center;">
 		<h1>2025年度多変数関数論冬セミナー</h1>
-		<h2>2025年12月19日(金)–21日(日)</h2>
+		<h2>2025年12月19日(金)午後–21日(日)午前</h2>
 		<h2><a href="https://www.kyushu-u.ac.jp/ja/campus/ito/" target="_blank">九州大学 伊都キャンパス</a><br>ウエスト1号館D棟4階414号室 IMIコンファレンスルーム</h2>
 	</div>
 	<hr style="clear:right;">
 	<h2>参加登録</h2>
-	TBA
+	準備中
 	<hr>
 	<h2>確定講演者</h2>
 	<ul>
@@ -77,7 +52,12 @@
 	<h2>懇親会</h2>
 	TBA
 	<hr>
-	<h2><a name="access">アクセス</a></h2>
+	<h2>アクセス</h2>
+	<ul>
+		<li><a href="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf" target="_blank">伊都キャンパスへのアクセス方法</a></li>
+		<li><a href="https://www.kyushu-u.ac.jp/f/61490/ITO_1_Jp.pdf" target="_blank">伊都キャンパスマップ</a> (ウエスト1号館D棟: ㊱の西端)</li>
+		<li>九大学研都市駅から来られる方に最適なバス停は, 往路が九大理学部, 復路が九大工学部です.</li>
+	</ul>
 	<hr>
 	<h2>世話人</h2>
 	<ul>
