講演者追加

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -42,6 +42,7 @@
 	<ul>
 		<li>石井 豊 (九州大学)</li>
 		<li>神田 秀峰 (東京大学)</li>
+		<li>佐野 友二 (福岡大学)</li>
 		<li>髙倉 真和 (東京都立大学)</li>
 		<li>濱野 佐知子 (京都産業大学)</li>
 		<li>松本 佳彦 (大阪大学)</li>
