講演者追加

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -46,6 +46,7 @@
 		<li>髙倉 真和 (東京都立大学)</li>
 		<li>濱野 佐知子 (京都産業大学)</li>
 		<li>松本 佳彦 (大阪大学)</li>
+		<li>山盛 厚伺 (福岡工業大学)</li>
 		<li>吉川 謙一 (京都大学)</li>
 	</ul>
 	他の講演者については現在調整中です.
