会場変更, 懇親会情報

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -31,14 +31,17 @@
 	<hr>
 	<div style="text-align:center;">
 		<h1>2025年度多変数関数論冬セミナー</h1>
-		<h2>2025年12月19日(金)午後–21日(日)午前</h2>
-		<h2><a href="https://www.kyushu-u.ac.jp/ja/campus/ito/" target="_blank">九州大学 伊都キャンパス</a><br>ウエスト1号館D棟4階414号室 IMIコンファレンスルーム</h2>
+		<h2>2025年12月19日 (金) 午後〜20日 (土)</h2>
+		<h3><a href="https://www.kyushu-u.ac.jp/ja/campus/ito/" target="_blank">九州大学 伊都キャンパス</a> ウエスト1号館D棟4階414号室 IMIコンファレンスルーム</h3>
+		<h2>2025年12月21日 (日) 午前</h2>
+		<h3><a href="https://nishijinplaza.kyushu-u.ac.jp/" target="_blank">九州大学 西新プラザ</a> 2階 大会議室A</h3>
 	</div>
 	<hr style="clear:right;">
 	<h2>参加登録</h2>
-	準備中
+	冬セミナーや下記の懇親会に参加される方は, 人数把握のため、<a href="https://forms.office.com/r/s9ThHbdBEc" target="_blank">登録フォーム</a>にご回答ください。
+	(懇親会に参加される場合は、締切にご注意ください。)
 	<hr>
-	<h2>確定講演者</h2>
+	<h2>講演者</h2>
 	<ul>
 		<li>石井 豊 (九州大学)</li>
 		<li>神田 秀峰 (東京大学)</li>
@@ -52,13 +55,24 @@
 	</ul>
 	<hr>
 	<h2>懇親会</h2>
-	TBA
+	<ul>
+		<li>日時: 12月20日 (土) 17:30発の送迎バスで出発予定</li>
+		<li>会場: <a href="https://itoshima-genkai.com/" target="_blank">寿司・活魚料理「玄海」</a></li>
+		<li>会費: 学生3,000円、その他6,000円程度の予定</li>
+	</ul>
+	参加希望の方は、<a href="https://forms.office.com/r/s9ThHbdBEc" target="_blank">登録フォーム</a>にご回答ください。
 	<hr>
 	<h2>アクセス</h2>
+	<h3>12月19日 (金) 〜20日 (土)</h3>
 	<ul>
 		<li><a href="https://www.kyushu-u.ac.jp/f/47288/access_JA02.pdf" target="_blank">伊都キャンパスへのアクセス方法</a></li>
 		<li><a href="https://www.kyushu-u.ac.jp/f/61490/ITO_1_Jp.pdf" target="_blank">伊都キャンパスマップ</a> (ウエスト1号館D棟: ㊱の西端)</li>
-		<li>九大学研都市駅から来られる方に最適なバス停は, 往路が九大理学部, 復路が九大工学部です.</li>
+		<li>九大学研都市駅から来られる方に最適なバス停は, 往路が「九大理学部」, 復路が「九大工学部」です.</li>
+	</ul>
+	<h3>12月21日 (日)</h3>
+	<ul>
+		<li><a href="https://nishijinplaza.kyushu-u.ac.jp/access.html" target="_blank">西新プラザへのアクセス方法</a></li>
+		<li>西新駅⑦番出口より徒歩約10分です.</li>
 	</ul>
 	<hr>
 	<h2>世話人</h2>
