プログラム欄

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -54,6 +54,9 @@
 		<li>吉川 謙一 (京都大学)</li>
 	</ul>
 	<hr>
+	<h2>プログラム</h2>
+	準備中
+	<hr>
 	<h2>懇親会</h2>
 	<ul>
 		<li>日時: 12月20日 (土) 17:30発の送迎バスで出発予定</li>
