冬セミナー: プログラム追加

--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -20,6 +20,24 @@
 			height: 1px;
 			background-image: linear-gradient(to right, white, black, white);
 		}
+		table {	
+			border-collapse: collapse;
+			text-align: center;
+		}
+		table th[scope=row]{
+			text-align: left;
+		}
+		table th {
+			background: #ddd;
+			padding: 5px;
+		}
+		table td {
+			background: #eee;
+			padding: 5px;
+		}
+		table tr:nth-child(odd) td {
+			background: #fff;
+		}
 	</style>
 </head>
 <body>
@@ -55,7 +73,53 @@
 	</ul>
 	<hr>
 	<h2>プログラム</h2>
-	準備中
+	<ul>
+		<li><a href="../pdf/2025scvwinter.pdf" target="_blank">PDF</a></li>
+	</ul>
+	<table>
+		<tr>
+			<td></td>
+			<th scope="col">19日 (金)</th>
+			<th scope="col">20日 (土)</th>
+			<th scope="col">12日 (日)</th>
+		</tr>
+		<tr>
+			<th scope="row">10:00–11:10</th>
+			<td></td>
+			<td>佐野 友二</td>
+			<td>髙倉 真和</td>
+		</tr>
+		<tr>
+			<th scope="row">11:20–12:20</th>
+			<td></td>
+			<td>松本 佳彦</td>
+			<td>吉川 謙一</td>
+		</tr>
+		<tr>
+			<th scope="row">13:10–14:10</th>
+			<td>石井 豊</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th scope="row">14:30–15:30</th>
+			<td>田中 仁一朗</td>
+			<td>山盛 厚伺</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th scope="row">15:50–16:50</th>
+			<td>神田 秀峰</td>
+			<td>濱野 佐知子</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th scope="row">17:30–</th>
+			<td></td>
+			<td>懇親会</td>
+			<td></td>
+		</tr>
+	</table>
 	<hr>
 	<h2>懇親会</h2>
 	<ul>
