--- a/2025scvwinter/index.html
+++ b/2025scvwinter/index.html
@@ -81,7 +81,7 @@
 			<td></td>
 			<th scope="col">19日 (金)</th>
 			<th scope="col">20日 (土)</th>
-			<th scope="col">12日 (日)</th>
+			<th scope="col">21日 (日)</th>
 		</tr>
 		<tr>
 			<th scope="row">10:00–11:00</th>
@@ -124,7 +124,7 @@
 	<h2>懇親会</h2>
 	<ul>
 		<li>日時: 12月20日 (土) 17:30発の送迎バスで出発予定</li>
-		<li>会場: <a href="https://itoshima-genkai.com/" target="_blank">寿司・活魚料理「玄海」</a></li>
+		<li>会場: <a href="https://itoshima-genkai.com/" target="_blank">寿司・活魚料理 玄海</a></li>
 		<li>会費: 学生3,000円、その他6,000円程度の予定</li>
 	</ul>
 	参加希望の方は、<a href="https://forms.office.com/r/s9ThHbdBEc" target="_blank">登録フォーム</a>にご回答ください。
